--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,5 @@
-runtime: nodejs
-handlers:
-  # Serve all static files with url ending with a file extension
-  - url: /(.*\..+)$
-    static_files: build/\1
-    upload: build/(.*\..+)$
-  # Catch all handler to index.html
-  - url: /.*
-    static_files: build/index.html
-    upload: build/index.html npm i
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/webpage', '.' ]
+images:
+- 'gcr.io/$PROJECT_ID/webpage'
