--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,13 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/webpage', '.' ]
+  # Build the container image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/all-about-kam/webpage', '.']
+  # Push the container image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/all-about-kam/webpage']
+  # Deploy container image to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args: ['run', 'deploy', 'kamservice', '--image', 'gcr.io/all-about-kam/webpage', '--region', 'REGION', '--platform', 'managed']
 images:
-- 'gcr.io/$PROJECT_ID/webpage'
+  - gcr.io/all-about-kam/webpage
